<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lay_title"
        style="@style/top_title_style">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dis_30"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#0000"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/top_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_order_detail" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/string_order_cancel" />
    </RelativeLayout>


    <cn.dogplanet.app.widget.library.PullToRefreshScrollView
        android:id="@+id/scroll_main"
        android:layout_below="@+id/lay_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_round_white_30"
                android:orientation="vertical"
                android:padding="@dimen/dis_20"
                android:layout_margin="@dimen/dis_36">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/string_name" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/string_phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/string_id_card_num" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/string_money" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_id_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1" />

                    <TextView
                        android:id="@+id/tv_money"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>


            <cn.dogplanet.app.widget.NoScrollListView
                android:id="@+id/list_sub_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="#0000"
                android:scrollbars="none" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_round_white_30"
                android:orientation="vertical"
                android:padding="@dimen/dis_20"
                android:layout_margin="@dimen/dis_36">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_order_num" />

                    <TextView
                        android:id="@+id/tv_order_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_time" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </cn.dogplanet.app.widget.library.PullToRefreshScrollView>



    <LinearLayout
        android:id="@+id/lay_pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/dis_20"
                android:layout_height="@dimen/dis_20"
                android:src="@mipmap/ic_launcher"
                android:layout_marginStart="@dimen/dis_24"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/font_size_12"
                android:layout_marginStart="@dimen/dis_10"
                android:text="@string/string_total_money"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/txt_selected_color"
                android:textSize="@dimen/font_size_16"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_f1_e0"
            android:layout_margin="@dimen/dis_20"
            android:text="@string/shop_pay"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_15"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</RelativeLayout>