<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgetPasswordActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/lay_title"
        style="@style/top_title_style" >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dis_5"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            style="@style/top_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/string_bind_wx" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dis_88"
        android:layout_below="@id/lay_title"
        android:layout_marginTop="@dimen/dis_160">

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/dis_40"
            android:layout_height="@dimen/dis_40"
            android:scaleType="center"
            android:src="@drawable/ic_phone"
            android:layout_marginStart="@dimen/dis_36"
            android:layout_centerVertical="true"
            />

        <cn.dogplanet.app.widget.EditTextWithDel
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_phone"
            android:background="@color/white"
            android:layout_marginStart="@dimen/dis_24"
            android:layout_marginEnd="@dimen/dis_40"
            android:hint="@string/hint_phone"
            android:textSize="@dimen/font_size_15"
            android:textColorHint="@color/color_c7"
            android:textColor="@color/color_33"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

    </RelativeLayout>

    <View
        style="@style/view_hor_margin_line"
        android:layout_marginStart="@dimen/dis_36"
        android:layout_marginEnd="@dimen/dis_36"
        android:layout_below="@id/lay_phone"
        />

    <RelativeLayout
        android:id="@+id/lay_verification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dis_88"
        android:layout_below="@id/lay_phone"
        android:layout_marginTop="@dimen/dis_20">

        <ImageView
            android:id="@+id/img_verification"
            android:layout_width="@dimen/dis_40"
            android:layout_height="@dimen/dis_40"
            android:scaleType="center"
            android:src="@drawable/ic_verification_normal"
            android:layout_marginStart="@dimen/dis_36"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_send_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_color"
            android:textSize="@dimen/font_size_14"
            android:layout_marginEnd="@dimen/dis_36"
            android:layout_alignParentEnd="true"
            android:text="@string/send_verification"
            android:layout_centerVertical="true"/>

        <cn.dogplanet.app.widget.EditTextWithDel
            android:id="@+id/et_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_verification"
            android:background="@color/white"
            android:layout_marginStart="@dimen/dis_24"
            android:layout_marginEnd="@dimen/dis_40"
            android:hint="@string/hint_verification"
            android:textSize="@dimen/font_size_15"
            android:textColorHint="@color/color_c7"
            android:textColor="@color/color_33"
            android:layout_toStartOf="@+id/tv_send_verification"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

    </RelativeLayout>



    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dis_80"
        android:layout_marginStart="@dimen/dis_60"
        android:layout_marginEnd="@dimen/dis_60"
        android:layout_below="@id/lay_verification"
        android:layout_marginTop="@dimen/dis_150"
        android:background="@drawable/gradient_c7_ab"
        android:text="@string/string_ok"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dis_30"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_ok"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击“确认”即表示已阅读并同意"
            android:textColor="@color/color_8e"
            android:textSize="@dimen/font_size_10" />

        <TextView
            android:id="@+id/tv_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer2"
            android:textColor="@color/color_8e"
            android:textSize="@dimen/font_size_10" />

    </LinearLayout>
</RelativeLayout>